[gd_scene load_steps=2 format=3 uid="uid://bi4lv4fgvqw3s"]

[ext_resource type="Script" path="res://scripts/ui/error_message.gd" id="1_error"]

[node name="ErrorMessage" type="PanelContainer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 20.0
offset_right = 300.0
offset_bottom = 100.0
grow_horizontal = 2
script = ExtResource("1_error")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 15

[node name="MessageLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 18
text = "Message d'erreur"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="HideTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
